--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>SOBRE A BARBEARIA</h1>
 <p>
-Localizada no coração da cidade de São José dos Pinhais, a barbearia Lipniarski traz para o mercado o que há de melhor para o seu cabelo e barba. fundada em 2022, com a melhor recepção, e atendimento ao cliente.
+Localizada no coração da cidade de São José dos Pinhais <srong>barbearia Lipniarski</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. fundada em 2022, com a melhor recepção, e atendimento ao cliente.
 </p>
 
   
