--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
 </head>
 
 <body>
-  <h1>SOBRE A BARBEARIA</h1>
-<p>
-Localizada no coração da cidade de São José dos Pinhais <srong>barbearia Lipniarski</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. fundada em 2022, com a melhor recepção, e atendimento ao cliente.
+
+  <img src="cadeira.jpg"" />
+  <h1>
+    SOBRE A BARBEARIA</h1>
+<p> 
+Localizada no coração da cidade de São José dos Pinhais <strong>barbearia Lipniarski</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. fundada em 2022, com a melhor recepção, e atendimento ao cliente.
 </p>
 
+  <p id="missao">
+     <em>nossa missa é: <strong>"proporcionar auto-estima e qualidade de vida aos clientes."</strong></em>
+  </p>
+  
   
 <p>
    oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação para nossos clientes.
 </p>
   
-
+ 
   
   
   
