--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>VOSSA BARBEARIA </title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 
 
 <body>
+  <header>
+    <h1 class="titulo-principal">BARBEARIA LIPNIARSKI</h1>
+  </header>
+
   <div class="principal">
 
     <img id="cadeira" src="cadeira.jpg">
-    <h1>
-      SOBRE A BARBEARIA</h1>
+    <h2>
+      SOBRE A BARBEARIA</h2>
     <p>
       Localizada no coração da cidade de São José dos Pinhais <strong>barbearia Lipniarski</strong> traz para o mercado
       o que há de melhor para o seu cabelo e barba. fundada em 2022, com a melhor recepção, e atendimento ao cliente.
@@ -34,8 +38,8 @@
 
   <div class="beneficios">
 
-    <h2>Benefícios</h2>
-    
+    <h3 class="texto-centralizado">Benefícios</h3>
+
     <ul>
       <li class="item">atendimento aos clientes</li>
 
