--- a/produtos.html
+++ b/produtos.html
@@ -11,6 +11,19 @@
 </head>
 
 <body>
+  <header>
+    <h1><img src="logo.png"></h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">home </a></li>
+        <li><a href="produtos.html">produto</a></li>
+        <li><a href="contato.html">contato</a></li>
+
+      </ul>
+
+
+    </nav>
+  </header>
 
 </body>
 
