--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
       <li class="item">localização</li>
 
-      <li class="item">precionais qualificados</li>
+      <li class="item">proficionais qualificados</li>
     </ul>
     <img id="beneficios" src="beneficios.jpg" />
   </div>
 <a href="produtos.html">teste</a>
-
+  <a href="position.html">position</a>
 
 
 
