--- a/produtos.html
+++ b/produtos.html
@@ -25,6 +25,29 @@
     </nav>
   </header>
 
+  <main>
+    <ul class="produtos">
+      <li>
+        <h2>cabelo</h2>
+        <img src="cabelo.jpg" />
+        <p>Na tesoura ou máquina, como o cliente preferir</p>
+        <p><strong>R$ 25,00</strong></p>
+      </li>
+      <li>
+        <h2>barba</h2>
+        <img src="barba.jpg" />
+        <p>Corte e desenho profissional de barba</p>
+        <p><strong>R$ 18,00</strong></p>
+      </li>
+      <li>
+        <h2>cabelo e barba</h2>
+        <img src="cabelo+barba.jpg" />
+        <p>Pacote completo de cabelo e barba</p>
+        <p><strong>R$ 35,00</strong></p>
+
+      </li>
+    </ul>
+  </main>
 </body>
 
 </html>
