--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </ul>
     <img id="beneficios" src="beneficios.jpg" />
   </div>
-<a href="produtos.html">teste</a>
-  <a href="position.html">position</a>
+<a href="produtos.html">VOLTAR AO MENU PRINCIPAL</a>
+  <a href="position.html">.</a>
 
 
 
