--- a/produtos.html
+++ b/produtos.html
@@ -12,17 +12,18 @@
 
 <body>
   <header>
-    <h1><img src="logo.png"></h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">home </a></li>
-        <li><a href="produtos.html">produto</a></li>
-        <li><a href="contato.html">contato</a></li>
+    <div class="caixa">
+      <h1><img src="logo.png"></h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">home </a></li>
+          <li><a href="produtos.html">produto</a></li>
+          <li><a href="contato.html">contato</a></li>
 
-      </ul>
+        </ul>
 
 
-    </nav>
+      </nav>
   </header>
 
   <main>
@@ -41,8 +42,8 @@
       </li>
       <li>
         <h2>cabelo e barba</h2>
-        <img src="cabelo+barba.jpg"/>
-        <p class="produto-descricao">Pacote completo de cabelo e barba.</p>
+        <img src="cabelo+barba.jpg" />
+        <p class="produto-descricao">Pacote completo de cabelo e</br> barba.</p>
         <p class="produto-preco">R$ 35,00</p>
 
       </li>
