--- a/contato.html
+++ b/contato.html
@@ -31,27 +31,27 @@
       <label for="nomesobrenome">
         NOME E SOBRENOME:
       </label>
-      <input class="input-padrao" type="text" id="nomesobrenome">
+      <input class="input-padrao" type="text" id="nomesobrenome" required>
 
       <label for="email">
         E-MAIL:
       </label>
-      <input class="input-padrao" type="email" id="email">
+      <input class="input-padrao" type="email" id="email" required>
 
       <label for="telefone">
         TELEFONE:
       </label>
-      <input class="input-padrao" type="tel" id="telefone">
+      <input class="input-padrao" type="tel" id="telefone" required>
 
       <label for="mensagem">
         Mensagem
       </label>
       <textarea class="input-padrao" cols="100" rows="10" id="mensagem">
       </textarea>
-      <div>
-        <p>
+      <fildset>
+        <legend>
           como prefere nosso contato?
-        </p>
+        </legend>
         <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">email</label>
 
 
@@ -59,28 +59,30 @@
         </label>
 
 
-        <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp"
-            id="radio-whatsapp">Whatsapp</label>
+        <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp"
+            checked>Whatsapp</label>
 
-      </div>
-      <p>
-        Qual horário prefere ser atendido?
-      </p>
+      </fildset>
+      
+      <fildset>
+        <legend>
+          Qual horário prefere ser atendido?
+        </legend>
 
-      <select>
-        <option>manhã</option>
-        <option>tarde</option>
-        <option>noite</option>
-      </select>
-
-
-
-
-
+        <select>
+          <option>manhã</option>
+          <option>tarde</option>
+          <option>noite</option>
+        </select>
+      </fildset>
 
 
 
-      <label><input type="checkbox">gostaria de receber nossas ofertas por e-Mail?</label>
+
+
+
+
+      <label><input type="checkbox" checked>gostaria de receber nossas ofertas por e-Mail?</label>
 
 
       <input type="submit" value="ENVIAR O FORMULÁRIO">
