--- a/contato.html
+++ b/contato.html
@@ -31,22 +31,22 @@
       <label for="nomesobrenome">
         NOME E SOBRENOME:
       </label>
-      <input class="input-padrao" type="text" id="nomesobrenome" required>
+      <input class="input-padrao" type="text" id="nomesobrenome" required placeholder="Nome E Sobrenome">
 
       <label for="email">
         E-MAIL:
       </label>
-      <input class="input-padrao" type="email" id="email" required>
+      <input class="input-padrao" type="email" id="email" required placeholder="Insira seu @gmail.com">
 
       <label for="telefone">
         TELEFONE:
       </label>
-      <input class="input-padrao" type="tel" id="telefone" required>
+      <input class="input-padrao" type="tel" id="telefone" required placeholder="insira seu número com DDD">
 
       <label for="mensagem">
         Mensagem
       </label>
-      <textarea class="input-padrao" cols="100" rows="10" id="mensagem">
+      <textarea class="input-padrao" cols="100" rows="10" id="mensagem" required placeholder="Como podemos te ajudar?">
       </textarea>
       <fildset>
         <legend>
@@ -63,7 +63,7 @@
             checked>Whatsapp</label>
 
       </fildset>
-      
+
       <fildset>
         <legend>
           Qual horário prefere ser atendido?
@@ -85,7 +85,7 @@
       <label><input type="checkbox" checked>gostaria de receber nossas ofertas por e-Mail?</label>
 
 
-      <input type="submit" value="ENVIAR O FORMULÁRIO">
+      <input type="submit" value="ENVIAR O FORMULÁRIO" class="enviar">
 
     </form>
 
