--- a/contato.html
+++ b/contato.html
@@ -88,6 +88,30 @@
       <input type="submit" value="ENVIAR O FORMULÁRIO" class="enviar">
 
     </form>
+    <table>
+      <thead>
+        <tr>
+          <th>dia</th>
+          <th>horário</th>
+        </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>segunda</td>
+        <td>8h - 20h</td>
+      </tr>
+
+      <tr>
+        <td>quarta</td>
+        <td>8h - 20h</td>
+      </tr>
+
+      <tr>
+        <td>sexta</td>
+        <td>8h - 20h</td>
+      </tr>
+      </tbody>
+    </table>
 
 
   </main>
