--- a/index.html
+++ b/index.html
@@ -5,60 +5,76 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>VOSSA BARBEARIA </title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style-principal.css" rel="stylesheet">
 </head>
 
 
 
 <body>
-  <header>
-    <h1 class="titulo-principal">BARBEARIA LIPNIARSKI</h1>
-  </header>
+  </head>
 
-  <div class="principal">
+  <body>
+    <header>
+      <div class="caixa">
+        <h1><img src="logo.png"></h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">home </a></li>
+            <li><a href="produtos.html">produto</a></li>
+            <li><a href="contato.html">contato</a></li>
 
-    <img id="cadeira" src="cadeira.jpg">
-    <h2>
-      SOBRE A BARBEARIA</h2>
-    <p>
-      Localizada no coração da cidade de São José dos Pinhais <strong>barbearia Lipniarski</strong> traz para o mercado
-      o que há de melhor para o seu cabelo e barba. fundada em 2022, com a melhor recepção, e atendimento ao cliente.
-    </p>
-
-    <p id="missao">
-      <em>nossa missa é: <strong id="LOL">"proporcionar auto-estima e qualidade de vida aos clientes."</strong></em>
-    </p>
+          </ul>
 
 
-    <p>
-      oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de
-      excelência e agilidade, garantindo qualidade e satisfação para nossos clientes.
-    </p>
-  </div>
+        </nav>
+    </header>
+    <div class="principal">
 
-  <div class="beneficios">
+      <img id="cadeira" src="cadeira.jpg">
+      <h2>
+        SOBRE A BARBEARIA</h2>
+      <p>
+        Localizada no coração da cidade de São José dos Pinhais <strong>barbearia Lipniarski</strong> traz para o
+        mercado
+        o que há de melhor para o seu cabelo e barba. fundada em 2022, com a melhor recepção, e atendimento ao cliente.
+      </p>
 
-    <h3 class="texto-centralizado">Benefícios</h3>
-
-    <ul>
-      <li class="item">atendimento aos clientes</li>
-
-      <li class="item">espaço diferenciado</li>
-
-      <li class="item">localização</li>
-
-      <li class="item">proficionais qualificados</li>
-    </ul>
-    <img id="beneficios" src="beneficios.jpg" />
-  </div>
-<a href="produtos.html">VOLTAR AO MENU PRINCIPAL</a>
-  <a href="position.html">.</a>
+      <p id="missao">
+        <em>nossa missa é: <strong id="LOL">"proporcionar auto-estima e qualidade de vida aos clientes."</strong></em>
+      </p>
 
 
+      <p>
+        oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de
+        excelência e agilidade, garantindo qualidade e satisfação para nossos clientes.
+      </p>
+    </div>
+
+    <div class="beneficios">
+
+      <h3 class="texto-centralizado">Benefícios</h3>
+
+      <ul>
+        <li class="item">atendimento aos clientes</li>
+
+        <li class="item">espaço diferenciado</li>
+
+        <li class="item">localização</li>
+
+        <li class="item">proficionais qualificados</li>
+      </ul>
+      <img id="beneficios" src="beneficios.jpg" />
+    </div>
+    
 
 
+<footer>
+    <img src="logo-branco.png">
+    <p class="copyright">&#169; Copyright BARBEARIA ALURA- 2019</p>
+</footer>
 
-  <script src="script.js"></script>
-</body>
+
+    <script src="script.js"></script>
+  </body>
 
 </html>
