--- a/index.html
+++ b/index.html
@@ -9,72 +9,97 @@
 </head>
 
 
-
-<body>
-  </head>
+<main>
 
   <body>
-    <header>
-      <div class="caixa">
-        <h1><img src="logo.png"></h1>
-        <nav>
+    </head>
+
+    <body>
+      <header>
+        <div class="caixa">
+          <h1><img src="logo.png"></h1>
+          <nav>
+            <ul>
+              <li><a href="index.html">home </a></li>
+              <li><a href="produtos.html">produto</a></li>
+              <li><a href="contato.html">contato</a></li>
+
+            </ul>
+
+
+          </nav>
+      </header>
+
+      <main>
+        <div class="principal">
+
+          <img id="cadeira" src="cadeira.jpg">
+          <h2>
+            SOBRE A BARBEARIA</h2>
+          <p>
+            Localizada no coração da cidade de São José dos Pinhais <strong>barbearia Lipniarski</strong> traz para o
+            mercado
+            o que há de melhor para o seu cabelo e barba. fundada em 2022, com a melhor recepção, e atendimento ao
+            cliente.
+          </p>
+
+          <p id="missao">
+            <em>nossa missa é: <strong id="LOL">"proporcionar auto-estima e qualidade de vida aos
+                clientes."</strong></em>
+          </p>
+
+
+          <p>
+            oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão
+            de
+            excelência e agilidade, garantindo qualidade e satisfação para nossos clientes.
+          </p>
+        </div>
+
+        <section class="mapa">
+          <h3 class="titulo-principal">Nosso estabelecimento</h3>
+          <p>
+            nosso estabelecimento esta localizado no coração da cidade
+          </p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3601.1049115282526!2d-49.17483812364241!3d-25.501547435728128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dcf0fa63f5dcdf%3A0xabffc9b368410955!2sLindaura%20R%20Lucas%2C%20C%20E%20Prof-Ef%20M!5e0!3m2!1spt-BR!2sbr!4v1718018121380!5m2!1spt-BR!2sbr"
+            width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        </section>
+
+
+        <section class="beneficios">
+          "
+          <h3 class="texto-centralizado">Benefícios</h3>
+
           <ul>
-            <li><a href="index.html">home </a></li>
-            <li><a href="produtos.html">produto</a></li>
-            <li><a href="contato.html">contato</a></li>
+            <li class="item">atendimento aos clientes</li>
 
+            <li class="item">espaço diferenciado</li>
+
+            <li class="item">localização</li>
+
+            <li class="item">proficionais qualificados</li>
           </ul>
+          <img id="beneficios" src="beneficios.jpg" />
+      <div class="video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/24T8TpGEKBo?si=a3BoI_tamBgTeC9O"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+        </section>
+      </main>
 
 
-        </nav>
-    </header>
-    <div class="principal">
-
-      <img id="cadeira" src="cadeira.jpg">
-      <h2>
-        SOBRE A BARBEARIA</h2>
-      <p>
-        Localizada no coração da cidade de São José dos Pinhais <strong>barbearia Lipniarski</strong> traz para o
-        mercado
-        o que há de melhor para o seu cabelo e barba. fundada em 2022, com a melhor recepção, e atendimento ao cliente.
-      </p>
-
-      <p id="missao">
-        <em>nossa missa é: <strong id="LOL">"proporcionar auto-estima e qualidade de vida aos clientes."</strong></em>
-      </p>
+      <footer>
+        <img src="logo-branco.png">
+        <p class="copyright">&#169; Copyright BARBEARIA ALURA- 2019</p>
+      </footer>
 
 
-      <p>
-        oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de
-        excelência e agilidade, garantindo qualidade e satisfação para nossos clientes.
-      </p>
-    </div>
-
-    <div class="beneficios">
-
-      <h3 class="texto-centralizado">Benefícios</h3>
-
-      <ul>
-        <li class="item">atendimento aos clientes</li>
-
-        <li class="item">espaço diferenciado</li>
-
-        <li class="item">localização</li>
-
-        <li class="item">proficionais qualificados</li>
-      </ul>
-      <img id="beneficios" src="beneficios.jpg" />
-    </div>
-    
-
-
-<footer>
-    <img src="logo-branco.png">
-    <p class="copyright">&#169; Copyright BARBEARIA ALURA- 2019</p>
-</footer>
-
-
-    <script src="script.js"></script>
-  </body>
+      <script src="script.js"></script>
+    </body>
 
 </html>
