--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 
 <main>
+<p>
+   parágrafos de demonstração 
+</p>
 
   <body>
     </head>
@@ -31,6 +34,7 @@
       </header>
 
       <main>
+        
         <div class="principal">
 
           <img id="cadeira" src="cadeira.jpg">
